--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <h1>To do</h1>
+    <div class="todo-container">
+        <header>
+            <h1>To do</h1>
+        </header>
+        <form id="todo-form">
+            <p>Adicione a sua tarefa:</p>
+            <div class="form-control">
+                <input type="text" id="todo-input" placeholder="O que você vai fazer?">
+            <button type="submit">
+                <i class="fa-thin fa-plus"></i>
+            </button>
+            </div>
+        </form>
+        <form id="edit-form">
+            <p>Edite a sua tarefa:</p>
+            <div class="form-control">
+                <input type="text" id="edit-input">
+                <button type="submit">
+                    <i class="fa-solid fa-check-double"></i>
+                </button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
