tentativa de estudar hoje fracassada, sorry.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
                 </button>
             </div>
         </form>
+        <div id="toolbar">
+            <div id="search">
+                <h4>Pesquisar:</h4>
+                <form>
+                    <input type="text" id="search-input" placeholder="Buscar">
+                    <button id="erase-button">
+                        <i class="fa-solid fa-delete-left"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 </html>
